add other shaders

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-Particle1.h
-Particle2.h
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -397,3 +396,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+#Custom
+Particle1.h
+Tex.h
