--- a/atelier-sync-fix.vcxproj
+++ b/atelier-sync-fix.vcxproj
@@ -80,15 +80,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Grass.h" />
     <ClInclude Include="impl.h" />
     <ClInclude Include="log.h" />
-    <ClInclude Include="Particle1.h" />
-    <ClInclude Include="RadialBlur.h" />
-    <ClInclude Include="Shaderbool.h" />
-    <ClInclude Include="Tex.h" />
+    <ClInclude Include="Shaders\Grass.h" />
+    <ClInclude Include="Shaders\Particle1.h" />
+    <ClInclude Include="Shaders\RadialBlur.h" />
+    <ClInclude Include="Shaders\Shaderbool.h" />
+    <ClInclude Include="Shaders\Tex.h" />
+    <ClInclude Include="Shaders\VolumeFog.h" />
     <ClInclude Include="util.h" />
-    <ClInclude Include="VolumeFog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="impl.cpp" />
