--- a/atelier-sync-fix.vcxproj.filters
+++ b/atelier-sync-fix.vcxproj.filters
@@ -3,7 +3,6 @@
   <ItemGroup>
     <ClCompile Include="impl.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="minhook\src\trampoline.c" />
     <ClCompile Include="minhook\src\buffer.c">
       <Filter>minhook</Filter>
     </ClCompile>
@@ -11,6 +10,9 @@
       <Filter>minhook</Filter>
     </ClCompile>
     <ClCompile Include="minhook\src\hook.c">
+      <Filter>minhook</Filter>
+    </ClCompile>
+    <ClCompile Include="minhook\src\trampoline.c">
       <Filter>minhook</Filter>
     </ClCompile>
   </ItemGroup>
