--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: MSBuild
 
 on:
@@ -12,13 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: .
-
-  # Configuration type to build.
-  # You can convert this to a build matrix if you need coverage of multiple configuration types.
-  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  BUILD_CONFIGURATION: Release
 
 permissions:
   contents: read
@@ -26,6 +15,10 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
+
+    strategy:
+      matrix:
+        configuration: [Release, ReleaseLowSettings]
 
     steps:
     - uses: actions/checkout@v3
@@ -41,13 +34,11 @@ jobs:
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{ matrix.configuration }} /p:Platform=x64 ${{ env.SOLUTION_FILE_PATH }}
 
     - name: Upload a Build Artifact      
       uses: actions/upload-artifact@v4
       with:
-        name: dll
+        name: ${{ matrix.configuration }}.dll
         retention-days: 90
-        path: D:\a\D-fix\D-fix\x64\Release\d3d11.dll
+        path: .\x64\${{ matrix.configuration }}\d3d11.dll
