--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -39,6 +39,6 @@ jobs:
     - name: Upload a Build Artifact      
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.configuration }}.dll
+        name: ${{ matrix.configuration }}
         retention-days: 90
         path: .\x64\${{ matrix.configuration }}\d3d11.dll
