refactor for multiple settings

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        configuration: [Release, ReleaseLowSettings]
+        configuration: [Release]
 
     steps:
     - uses: actions/checkout@v3
