Fix player shadow and add Diff Spheric Shader

--- a/atelier-sync-fix.vcxproj
+++ b/atelier-sync-fix.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="minhook\include\MinHook.h" />
     <ClInclude Include="Shaderbool.h" />
     <ClInclude Include="Shaders\Default.h" />
+    <ClInclude Include="Shaders\DiffSpheric.h" />
     <ClInclude Include="Shaders\Grass.h" />
     <ClInclude Include="Shaders\Particle1.h" />
     <ClInclude Include="Shaders\Player.h" />
