--- a/atelier-sync-fix.vcxproj.filters
+++ b/atelier-sync-fix.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Shaders\SkyBox.h">
       <Filter>Shaders</Filter>
     </ClInclude>
+    <ClInclude Include="Shaders\DiffSpheric.h">
+      <Filter>Shaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
